@@ -3,7 +3,9 @@
 {% block content %}
 <ul id="tabs">
   <li><a href="{{ page_title|pageurl }}">View</a></li>
+  {% if can_edit %}
   <li><a href="/w/edit?page={{ page_title|uurlencode }}">Edit</a></li>
+  {% endif %}
   <li class="active"><a href="/w/history?page={{ page_title|uurlencode }}">History</a></li>
 </ul>
 <div id="pb" class="wtabs">
